# blockchain-science-rs

./: .env_example  .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: rust_tests copy.yml  rust_tests.yml
algorithms-and-data-structures/: README.md
algorithms-and-data-structures/module_1_beginner/: README.md
algorithms-and-data-structures/module_1_beginner/gm_world/: Cargo.toml
coingator/: Cargo.toml
coingator/src/: lib.rs
coingator/src/cexs/: bmex.rs
coingator/src/dexs/: mempool.rs
coingator/src/market/: coingecko.rs
coingator/src/searchers/: searcher_one.rs
foundry-flashloans/: README.md
foundry-flashloans/cache/: solidity-files-cache.json
foundry-historical/avalanche-c-chain/: README.md
foundry-historical/avalanche-c-chain/cache/: solidity-files-cache.json
kiddor-searcher-bot/: Cargo.toml  README.md
kiddor-searcher-bot/data/: whales.txt
kiddor-searcher-bot/src/: main.rs
kiddor-searcher-bot/src/cexs/: bbit.rs  mod.rs
kiddor-searcher-bot/src/dexs/: gmx.rs  mod.rs
kiddor-searcher-bot/src/market/: coingecko.rs
sparse-merkle-tree/: .gitignore  Cargo.toml  Makefile  README.md  shell.nix
sparse-merkle-tree/src/: common.rs  kv_trait.rs  lib.rs  sorted_kv.rs  sparse_merkle_tree.rs
src/: buybit.rs  bybit.rs  lib.rs  main.rs  utils.rs
src/cexs/: bnb.rs
src/market/: mod.rs
src/markets/: bbit.rs  mod.rs
src/science/: mod.rs
src/searcher/: boilerplate.rs  mod.rs
src/searchers/: mod.rs
src/trade/: bbitbot.rs  bmexbot.rs  bnbbot.rs  bot1.rs  mod.rs
src/txs/: calldata.rs  decoder.rs  mod.rs
src/utils/: mod.rs
(+30 files in other folders)
