[package]
name = "coingator"
version = "0.1.0"
edition = "2021"
license = "MIT"
description="A statistical arbitrage seacher toolkit"

[lib]
path = "src/lib.rs"

[dependencies]
dotenv = "0.15.0"
reqwest = "0.11.10"
web3 = "0.18.0"
ethers = {version = "1.0.2", git = "https://github.com/gakonst/ethers-rs", features = ["ws", "rustls", "abigen"] }
tokio = { version = "1.5", features = ["macros", "rt-multi-thread"] }
rust-bybit = { version = "0.1.0-alpha.0", git = "https://github.com/yufuquant/rust-bybit.git" }
