[package]
name = "ads-and-sparse-merkle-trees"
version = "0.1.0"
authors = ["Mia Stein"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "0.9.8"
digest = "0.9.0"

[dev-dependencies]
quickcheck = "1"
quickcheck_macros = "1"

